# gvfs

./: .gitignore  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  COPYING  ChangeLog  INSTALL  MAINTAINERS  Makefile  Makefile.am  NEWS  NEWS.pre-1-2  README  README.commits  README.md  TODO  autogen.sh  codegen.py  config.h  configure.ac  dbus.service.in  dbus.txt  gfile.c  gfile.h  gfileenumerator.c  gfileenumerator.h  gfileenumeratorsimple.c  gfileenumeratorsimple.h  gfileinfo.c  gfileinfo.h  gfileinfosimple.c  gfileinfosimple.h  gfileinputstream.c  gfileinputstream.h  gfileoutputstream.c  gfileoutputstream.h  gfilesimple.c  gfilesimple.h  ginputstream.c  ginputstream.h  (+25 more)
client/: .gitignore  Makefile.am  afpuri.c  gdaemondirectorymonitor.c  gdaemondirectorymonitor.h  gdaemonfile.c  gdaemonfile.h  gdaemonfileenumerator.c  gdaemonfileenumerator.h  gdaemonfileinputstream.c  gdaemonfileinputstream.h  gdaemonfilemonitor.c  gdaemonfilemonitor.h  gdaemonfileoutputstream.c  gdaemonfileoutputstream.h  gdaemonmount.c  gdaemonmount.h  gdaemonvfs.c  gdaemonvfs.h  gdaemonvolume.c  gdaemonvolume.h  gdaemonvolumemonitor.c  gdaemonvolumemonitor.h  gdbusutils.c  gdbusutils.h  gfiledaemon.c  gfiledaemon.h  gfiledaemonlocal.c  gfiledaemonlocal.h  gfileenumeratordaemon.c  gfileenumeratordaemon.h  gfileinputstreamdaemon.c  gfileinputstreamdaemon.h  gfileoutputstreamdaemon.c  gfileoutputstreamdaemon.h  glocaldaemonfile.c  glocaldaemonfile.h  gvfsd-fuse-tmpfiles.conf  gvfsdaemondbus.c  gvfsdaemondbus.h  (+22 more)
common/: Makefile.am  dbus-interfaces.xml  gdbusutils.c  gdbusutils.h  gfileref.c  gfileref.h  gmountoperationdbus.c  gmountoperationdbus.h  gmountsource.c  gmountsource.h  gmountspec.c  gmountspec.h  gmounttracker.c  gmounttracker.h  gsysutils.c  gsysutils.h  gvfsdaemonprotocol.c  gvfsdaemonprotocol.h  gvfsdbusutils.c  gvfsdbusutils.h  gvfsdnssdresolver.c  gvfsdnssdresolver.h  gvfsdnssdutils.c  gvfsdnssdutils.h  gvfsfileinfo.c  gvfsfileinfo.h  gvfsgphoto2utils.c  gvfsgphoto2utils.h  gvfshalutils.c  gvfsicon.c  gvfsicon.h  gvfsmonitorimpl.c  gvfsmonitorimpl.h  gvfsmountinfo.c  gvfsmountinfo.h  gvfsurimapper.c  gvfsurimapper.h  gvfsuriutils.c  gvfsuriutils.h  gvfsutils.c  (+3 more)
daemon/: .gitignore  Makefile.am  ParseFTPList.c  ParseFTPList.h  admin.mount.in  afc.mount.in  afp-browse.mount.in  afp.mount.in  archive.mount.in  burn.mount.in  daemon-main-generic.c  daemon-main.c  daemon-main.h  dav+sd.mount.in  dav.mount.in  dbus-gmain.c  dbus-gmain.h  dns-sd.mount.in  ftp.mount.in  ftpes.mount.in  ftpis.mount.in  ftps.mount.in  gmountsource.c  gmountsource.h  google.mount.in  gvfs-daemon.c  gvfs-daemon.service.in  gvfs-dns-sd.convert  gvfs-enums.h  gvfs-smb.convert  gvfsafpconnection.c  gvfsafpconnection.h  gvfsafpserver.c  gvfsafpserver.h  gvfsafptypes.h  gvfsafputils.c  gvfsafputils.h  gvfsafpvolume.c  gvfsafpvolume.h  gvfsbackend.c  (+228 more)
fuse/: Makefile.am  gvfsfusedaemon.c
gconf/: Makefile.am  gapplookupgconf.c  gapplookupgconf.h  gconf-module.c
gio/: .gitignore  Makefile.am  gappinfo.c  gappinfo.h  gasynchelper.c  gasynchelper.h  gasyncresult.c  gasyncresult.h  gbufferedinputstream.c  gbufferedinputstream.h  gbufferedoutputstream.c  gbufferedoutputstream.h  gcancellable.c  gcancellable.h  gcontenttype.c  gcontenttype.h  gcontenttypeprivate.h  gdesktopappinfo.c  gdesktopappinfo.h  gdirectorymonitor.c  gdirectorymonitor.h  gdirectorymonitorpriv.h  gdrive.c  gdrive.h  gdrivepriv.h  gdummyfile.c  gdummyfile.h  gfile.c  gfile.h  gfileattribute.c  gfileattribute.h  gfileenumerator.c  gfileenumerator.h  gfileenumeratorlocal.c  gfileenumeratorlocal.h  gfileicon.c  gfileicon.h  gfileinfo.c  gfileinfo.h  gfileinfolocal.c  (+101 more)
gio/fam/: Makefile.am  (+2 more)
gvfs/: .gitignore  Makefile.am  gasynchelper.c  gasynchelper.h  gcancellable.c  gcancellable.h  gdbusutils.c  gdbusutils.h  gfile.c  gfile.h  gfiledaemon.c  gfiledaemon.h  gfiledaemonlocal.c  gfiledaemonlocal.h  gfileenumerator.c  gfileenumerator.h  gfileenumeratordaemon.c  gfileenumeratordaemon.h  gfileenumeratorlocal.c  gfileenumeratorlocal.h  gfileenumeratorsimple.c  gfileinfo.c  gfileinfo.h  gfileinfolocal.c  gfileinfolocal.h  gfileinfosimple.c  gfileinfosimple.h  gfileinputstream.c  gfileinputstream.h  gfileinputstreamdaemon.c  gfileinputstreamdaemon.h  gfileinputstreamlocal.c  gfileinputstreamlocal.h  gfilelocal.c  gfilelocal.h  gfileoutputstream.h  gfileoutputstreamlocal.c  gfileoutputstreamlocal.h  gfilesimple.c  gfileunix.c  (+50 more)
hal/: Makefile.am  ghaldrive.c  ghaldrive.h  ghalmount.c  ghalmount.h  ghalvolume.c  ghalvolume.h  ghalvolumemonitor.c  ghalvolumemonitor.h  hal-device.c  hal-device.h  hal-module.c  hal-pool.c  hal-pool.h  hal-utils.c
man/: Makefile.am  deprecated.xml.in  gvfs-cat.xml  gvfs-copy.xml  gvfs-info.xml  gvfs-less.xml  gvfs-ls.xml  gvfs-mime.xml  gvfs-mkdir.xml  gvfs-monitor-dir.xml  gvfs-monitor-file.xml  gvfs-mount.xml  gvfs-move.xml  gvfs-open.xml  gvfs-rename.xml  gvfs-rm.xml  gvfs-save.xml  gvfs-set-attribute.xml  gvfs-trash.xml  gvfs-tree.xml  gvfs.xml  gvfsd-fuse.xml  gvfsd-metadata.xml  gvfsd.xml  meson.build
metadata/: .gitignore  Makefile.am  crc32.c  crc32.h  dbus-interface.xml  file-format.txt  gvfs-metadata.service.in  meson.build  meta-daemon.c  meta-get-tree.c  meta-get.c  meta-ls.c  meta-set.c  metabuilder.c  metabuilder.h  metadata-nautilus.c  metadata-tracker-miner.c  metadata-tracker-miner.h  metatree.c  metatree.h  org.gtk.vfs.Metadata.service.in
monitor/: Makefile.am  meson.build
programs/: .gitignore  Makefile.am  deprecated.in  gvfs-bash-completion.sh  gvfs-cat.c  gvfs-copy.c  gvfs-create.c  gvfs-info.c  gvfs-ls.c  gvfs-mime.c  gvfs-mkdir.c  gvfs-monitor-dir.c  gvfs-monitor-file.c  gvfs-mount.c  gvfs-move.c  gvfs-open.c  gvfs-rename.c  gvfs-rm.c  gvfs-save.c  gvfs-set-attribute.c  gvfs-trash.c  gvfs-tree.c  meson.build
test/: .gitignore  Makefile.am  benchmark-common.c  benchmark-gvfs-big-files.c  benchmark-gvfs-small-files.c  benchmark-posix-big-files.c  benchmark-posix-small-files.c  google.c  gvfs-all-tests.in  gvfs-test  gvfs-testbed  meson.build  run-in-tree.sh  session.conf.in  test-query-info-stream.c  test_polkitd.py
(+528 files in other folders)
