NULL =

SUBDIRS = \
	common \
	client \
	daemon \
	monitor \
	gconf \
	po   \
	programs \
	test \
	$(NULL)

DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc

EXTRA_DIST = \
	ChangeLog.pre-1-2	\
	gvfs.doap		\
	README.commits		\
	MAINTAINERS		\
	$(NULL)

DISTCLEANFILES = \
	intltool-extract	\
	intltool-merge		\
	intltool-update		\
	$(NULL)
